2007-04-09  Quentin Mathe <qmathe@club-internet.fr>

	* ApplicationManager.h: Minor adjustments.
	* EtoileSystem.h: New ivar _launchQueueScheduled.
	* EtoileSystem.m (-synchronizeProcessesWithConfigFile): Modified indenting
	to match Etoile guidelines and reformatted the code to look better. Also
	reintroduced live processes synchronization with the config file thanks
	to flag _launchQueueScheduled.

2007-04-07  Quentin Mathe <qmathe@club-internet.fr>

	* ApplicationManager.m: Made the code more solid by initializing all vars 
	and by logging warnings for all incorrect returned values (not in their 
	boundaries). Lot of work on public and private documentation. Finished to
	update indenting for -terminateAllApplicationsOnOperation: especially.
	Few cleanings of the code (like variable name or order of substatements).

2007-04-07  Quentin Mathe <qmathe@club-internet.fr>

	* ApplicationManager.m: Almost fully updated the indenting to be compliant 
	with Etoile coding guidelines. Improved documentation.

2007-04-07  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileSystem.m: Minor logging improvement.

2007-03-22  Quentin Mathe <qmathe@club-internet.fr>

	* ApplicationManager.m:
	* EtoileSystem.m:
	* SCTask.m: 
	Shut down all compilation warnings except one in ApplicationManager. This
	corrects the potential bug in SCTask outlined in #8729

2007-03-22  Quentin Mathe <qmathe@club-internet.fr>

	* SystemTaskList.plist: Updated to include AZDock and AZBackground.

2007-03-18  Yen-Ju Chen <yjchenx gmail>

	* WorkspaceCommKit/NSWorkspace+Communication.m:
	Do not check for GSWorkspaceApplication because in any case,
	it will not work. (See source code for more explanation).

2007-03-18  Yen-Ju Chen <yjchenx gmail>

	* SCTask.h:
	* EtoileSystem.h:
	Change arguments to NSArray type since it is what SystemTaskList.plist has.
	* EtoileSystem.m:
	Support arguments.

2007-03-17  Quentin Mathe <qmathe@club-internet.fr>
